src/styles/antd-customized.css
/* Sider */
.ant-menu-inline {
  border-right: 0px !important;
}

/* Header */
/* .ant-menu-horizontal {
  border-bottom: 0px !important
} */

.ant-divider,
.ant-divider::before,
.ant-divider::after {
  border-top: 1px solid var(--lighter-text-color) !important;
}

.ant-divider-horizontal.ant-divider-with-text {
  border-top: 0px !important;
}

.ant-divider-vertical {
  border-left: 1px solid var(--lighter-text-color) !important;
}

.ant-spin-nested-loading,
.ant-spin-container {
  height: 100%;
  overflow: hidden;
}

/* sider menu透明 */
.ant-menu.ant-menu-root.ant-menu-inline {
  background: transparent !important;
}

.ant-menu.ant-menu-sub.ant-menu-inline {
  background: rgba(var(--primary-bg-color), 0.3) !important;
}

/* menu selected */
.ant-menu-item.ant-menu-item-selected.ant-menu-item-only-child {
  background-color: rgba(var(--primary-bg-color), 0.6) !important;
}

/* 抽屉 */
.ant-drawer-header,
.ant-drawer-body {
  background-color: rgb(var(--primary-bg-color)) !important;
}

